test-cases/final-dump/resource_error.exp
Error detected during resource checking of module(s) resource_error
final-dump/resource_error.wybe:2:5: Call to resourceful proc without ! resource marker: wybe.string.<0>println(tmp#0:wybe.string)
